Renamed and tidied up initial repo

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GitHub page PWA template</title>
-  <link rel="canonical" href="https://syntaxistaxsyn.github.io/github-page-pwa/" />
-  <link rel="manifest" href="/github-page-pwa/manifest.webmanifest">
+  <link rel="canonical" href="https://syntaxistaxsyn.github.io/SD-Calculator/" />
+  <link rel="manifest" href="/SD-Calculator/manifest.webmanifest">
   <link rel="stylesheet" href="css/styles.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
@@ -53,8 +53,8 @@
   <script>
       if (navigator.serviceWorker) {
         navigator.serviceWorker.register (
-          '/github-page-pwa/sw.js',
-          {scope: '/github-page-pwa/'}
+          '/SD-Calculator/sw.js',
+          {scope: '/SD-Calculator/'}
         )
       }
   </script>
